SERVER-59888 Ensure consistent acquisition order for `_statesMutex` and `_idleMutex` in the `BucketCatalog`